--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,8 @@ body ul {
     margin-top: 20px;
     width: 100%;
     font-size: 20px;
-    line-height: 30px;
+    line-height: 40px;
+    text-align: left;
   }
 
   /* Skills CSS */
