--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,40 @@ body ul {
   display: flex;
   flex-direction: column;
 }
+
+/* Github Link CSS */
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out;
+  -webkit-animation: octocat-wave 560ms ease-in-out;
+}
+@keyframes octocat-wave {
+  0%,
+  100% {
+    transform: rotate(0);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+  }
+  20%,
+  60% {
+    transform: rotate(-25deg);
+  }
+  40%,
+  80% {
+    transform: rotate(10deg);
+  }
+}
+@media (max-width: 500px) {
+  .github-corner:hover .octo-arm {
+    animation: none;
+    -webkit-animation: non;
+    animation: octocat-wave 560ms ease-in-out;
+    -webkit-animation: octocat-wave 560ms ease-in-out;
+  }
+}
+/* Github Link CSS */
+
 /* Navbar CSS */
 .navbar {
   position: fixed;
